# nibiru-wasm

./: .editorconfig  .gitignore  BINDINGS.md  CLAUDE.md  Cargo.toml  Cookbook.md  PUBLISHING.md  README.md  build_optimised_release.sh  burn_args.json  check-deps-in-sync.sh  justfile  mint_args.json  package.json  rustfmt.toml  txhash.init.json  txhash.json  wasm-out.sh
contracts/airdrop/: Cargo.toml  README.md
contracts/airdrop-token-vesting/: Cargo.toml  README.md
contracts/airdrop-token-vesting/schema/: execute_msg.json  instantiate_msg.json  query_msg.json  vesting_account_response.json
contracts/airdrop-token-vesting/src/: contract.rs  errors.rs  msg.rs  state.rs  testing.rs
contracts/airdrop/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/airdrop/src/tests/: instantiate.rs  mod.rs
contracts/bindings-perp/: Cargo.toml  execute_msg.json
contracts/bindings-perp/src/: binding.rs  contract.rs  integration_test.rs  lib.rs  msg.rs  querier.rs  query.rs  state.rs
contracts/broker-bank/: Cargo.toml  README.md
contracts/broker-bank/src/: contract.rs  error.rs  events.rs  lib.rs  msgs.rs  oper_perms.rs  state.rs  tutil.rs
contracts/broker-staking/: Cargo.toml  README.md
contracts/broker-staking/examples/: schema.rs
contracts/broker-staking/src/: contract.rs  lib.rs  msg.rs  testing.rs
contracts/core-cw3-flex-msig/: Cargo.toml  README.md
contracts/core-cw3-flex-msig/src/: contract.rs  contract_test.rs  lib.rs  state.rs
contracts/core-token-vesting/: Cargo.toml
contracts/core-token-vesting/app/: .editorconfig  bun.lockb  index.html  package.json  tailwind.config.js
contracts/core-token-vesting/app/src/: App.tsx  Wallet.tsx  index.css  window.d.ts
contracts/core-token-vesting/schema/: execute_msg.json  instantiate_msg.json
contracts/core-token-vesting/src/: contract.rs  errors.rs  msg.rs  state.rs  testing.rs
contracts/core-token-vesting/tests/tests/: mod.rs  test_airdrop.rs  test_manager.rs  test_vesting.rs
contracts/core-token-vesting/ts/: TokenVesting.client.ts
contracts/incentives/: Cargo.toml
contracts/incentives/.cargo/: config.toml
contracts/incentives/src/: contract.rs  error.rs  events.rs  lib.rs  msgs.rs  state.rs  testing.rs
contracts/lockup/: Cargo.toml
contracts/lockup/src/: contract.rs  contract_test.rs  error.rs  events.rs  lib.rs  msgs.rs  state.rs
contracts/nibi-stargate/: Cargo.toml  README.md
contracts/nibi-stargate-perp/: Cargo.toml
contracts/nibi-stargate-perp/src/: contract.rs  msg.rs
contracts/nibi-stargate/src/: contract.rs  error.rs  events.rs  lib.rs  msgs.rs  state.rs
contracts/nusd-valuator/: Cargo.toml
contracts/nusd-valuator/src/: contract.rs  error.rs  events.rs  lib.rs  msgs.rs  queries.rs  state.rs  testing.rs
contracts/perp/: Cargo.toml
contracts/perp/src/: binding_msgs.rs  bindings.rs  contract.rs  error.rs  events.rs  lib.rs  msgs.rs  querier.rs
contracts/pricefeed/: Cargo.toml
contracts/pricefeed/src/: contract.rs  error.rs  events.rs  lib.rs  msgs.rs  state.rs
contracts/token-vesting/: Cargo.toml  README.md
contracts/token-vesting/schema/: cw20_hook_msg.json  query_msg.json  vesting_account_response.json
contracts/token-vesting/src/: constant.rs  contract.rs  errors.rs  lib.rs  msg.rs  state.rs  testing.rs
contracts/workshop/: Cargo.toml
contracts/workshop/.cargo/: config  config.toml
contracts/workshop/src/: contract.rs  error.rs  lib.rs  msg.rs  msgs.rs  state.rs
nibiru-std/: Cargo.toml  LICENSE  README.md
nibiru-std/src/: address.rs  errors.rs  lib.rs  math.rs  wasm.rs
nibiru-std/src/bindings/: mod.rs  msg.rs  querier.rs  query.rs  state.rs
nibiru-std/src/proto/: cosmos.app.runtime.v1alpha1.rs  cosmos.app.v1alpha1.rs  cosmos.auth.module.v1.rs  cosmos.authz.module.v1.rs  cosmos.authz.v1beta1.rs  cosmos.autocli.v1.rs  cosmos.bank.module.v1.rs  cosmos.bank.v1beta1.rs  cosmos.base.abci.v1beta1.rs  cosmos.base.node.v1beta1.rs  cosmos.base.query.v1beta1.rs  cosmos.base.reflection.v1beta1.rs  cosmos.base.snapshots.v1beta1.rs  cosmos.base.store.v1beta1.rs  cosmos.base.v1beta1.rs  cosmos.capability.module.v1.rs  cosmos.capability.v1beta1.rs  cosmos.consensus.module.v1.rs  cosmos.consensus.v1.rs  cosmos.crisis.module.v1.rs  cosmos.crisis.v1beta1.rs  cosmos.crypto.hd.v1.rs  cosmos.crypto.multisig.rs  cosmos.crypto.multisig.v1beta1.rs  cosmos.crypto.secp256k1.rs  cosmos.distribution.v1beta1.rs  cosmos.evidence.module.v1.rs  cosmos.evidence.v1beta1.rs  cosmos.feegrant.module.v1.rs  cosmos.feegrant.v1beta1.rs  cosmos.genutil.module.v1.rs  cosmos.genutil.v1beta1.rs  cosmos.gov.v1beta1.rs  cosmos.group.module.v1.rs  cosmos.group.v1.rs  cosmos.mint.module.v1.rs  cosmos.mint.v1beta1.rs  cosmos.nft.module.v1.rs  cosmos.orm.module.v1alpha1.rs  cosmos.orm.query.v1alpha1.rs  (+24 more)
nibiru-std/src/proto/buf/: cosmos.app.runtime.v2.rs  cosmos.app.v1alpha1.rs  cosmos.auth.v1beta1.rs  cosmos.autocli.v1.rs  cosmos.bank.v1beta1.rs  cosmos.base.abci.v1beta1.rs  cosmos.base.kv.v1beta1.rs  cosmos.base.node.v1beta1.rs  cosmos.base.query.v1beta1.rs  cosmos.base.reflection.v2alpha1.rs  cosmos.base.tendermint.v1beta1.rs  cosmos.base.v1beta1.rs  cosmos.consensus.v1.rs  cosmos.crypto.ed25519.rs  cosmos.crypto.keyring.v1.rs  cosmos.crypto.secp256r1.rs  cosmos.distribution.module.v1.rs  cosmos.gov.module.v1.rs  cosmos.gov.v1.rs  cosmos.nft.v1beta1.rs  cosmos.orm.module.v1alpha1.rs  cosmos.orm.query.v1alpha1.rs  cosmos.orm.v1.rs  cosmos.orm.v1alpha1.rs  cosmos.params.v1beta1.rs  cosmos.slashing.v1beta1.rs  cosmos.staking.module.v1.rs  cosmos.staking.v1beta1.rs  cosmos.store.internal.kv.v1beta1.rs  cosmos.store.snapshots.v1.rs  cosmos.store.streaming.abci.rs  cosmos.store.v1beta1.rs  cosmos.streaming.v1.rs  cosmos.tx.config.v1.rs  cosmos.tx.signing.v1beta1.rs  cosmos.tx.v1beta1.rs  cosmos.vesting.module.v1.rs  eth.evm.v1.rs  eth.types.v1.rs  nibiru.devgas.v1.rs  (+15 more)
nibiru-std/src/tutil/: mod.rs
scripts/: Cargo.toml  bashlib.sh  install-publish-tools.sh  proto_clean.rs  publish-coupled.sh  scripts_docs.sh  wasm-export.sh  wasm-out.sh  wasm_out.rs
scripts/test/: fixture_proto_dirty.rs
(+124 files in other folders)
