[package]
name = "nibiru-std"
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
description = "Nibiru standard library for CosmWasm smart contracts"
authors = ["Unique Divine <realuniquedivine@gmail.com>"]

documentation = "https://docs.rs/nibiru-std"
license-file = "LICENSE"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cosmwasm-std    = { workspace = true }
cosmwasm-schema = { workspace = true }
prost           = { workspace = true }
prost-types     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
bech32          = "0.9"
hex             = "0.4"

# cargo run --bin script-name
# [[bin]]
# name = "rust script name"
# path = "bin/script_name.rs"