[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.4.0"
regex = "1.9.6"
bash-rs = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
lazy_static = { workspace = true }
tempfile = "3.8"

# cargo run --bin proto_clean
[[bin]]
name = "proto_clean"
path = "proto_clean.rs"

# cargo run --bin wasm_out -- all
[[bin]]
name = "wasm_out"
path = "wasm_out.rs"