[package]
name = "airdrop-token-vesting"
version = "0.2.0"
edition = "2021"
description = "Airdrop token vesting contract"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = "1.4.0"
cw20 = "1.1.1"
cw-utils = { version = "1.0.2" }
thiserror = { version = "1.0.49" }
cw-storage-plus = "1.1.0"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
anyhow = { workspace = true }
