[package]
name = "airdrop"
version = "0.0.1"
edition = "2021"
homepage = "https://nibiru.fi"
repository = "https://github.com/NibiruChain/cw-nibiru"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
nibiru-std = { workspace = true }
thiserror = { workspace = true }
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
cw-ownable = { workspace = true }
cw2 = { workspace = true }
semver = "1"

[dev-dependencies]
anyhow = { workspace = true }
serde-json-wasm = "1.0.0"
