[package]
name = "bindings-perp"
version = "0.1.0"
edition = "2021"
homepage = "https://nibiru.fi"
repository = "https://github.com/NibiruChain/cw-nibiru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.2.3" }
cosmwasm-std = { version = "1.2.3" }
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }
cw-utils = { version = "1.0.1" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
nibiru-bindings = { path = "../../packages/bindings" }
nibiru-macro = { path = "../../packages/macro" }

[dev-dependencies]
cosmwasm-vm = "1.2.3"
serde_json = "1.0.95"
dummy = { path = "../../packages/dummy" }