[package]
name = "bindings-perp"
version = "0.2.0"
edition = "2021"
homepage = "https://nibiru.fi"
repository = "https://github.com/NibiruChain/cw-nibiru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.4.0" }
cosmwasm-std = { version = "1.4.0" }
cw2 = { version = "1.1.1" }
cw20 = { version = "1.1.1" }
cw-storage-plus = { version = "1.1.0" }
cw-utils = { version = "1.0.2" }
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
nibiru-std = { path = "../../nibiru-std" }
nibiru-macro = { path = "../../packages/macro" }

[dev-dependencies]
cosmwasm-vm = "1.4.0"
serde_json = "1.0.107"
dummy = { path = "../../packages/dummy" }