[package]
name = "broker-staking"
version = "0.2.0"
edition = "2021"
description = "Broker smart contract to stake on another account's behalf"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { workspace = true }
cw-ownable = { workspace = true }
nibiru-std = { workspace = true }
cosmwasm-std = { workspace = true }
cw20.workspace = true
cw-utils = { workspace = true }
thiserror = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
broker-bank = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }