[package]
name = "cw3-flex-multisig"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Implementing cw3 with multiple voting patterns and dynamic groups"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-utils = "1.0.2"
cw2 = { workspace = true }
cw3 = { workspace = true }
cw3-fixed-multisig = { workspace = true }
cw4 = { workspace = true }
cw20 = { workspace = true }
schemars = "0.8.15"
serde = { version = "1.0.190", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw4-group = { version = "1.1.1" }
cw-multi-test = "0.17.0"
cw20-base = { version = "1.1.1" }