[package]
name = "cw3-flex-multisig"
version = "2.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Implementing cw3 with multiple voting patterns and dynamic groups"
license = "Apache-2.0"
repository = "https://github.com/NibiruChain/nibiru-wasm"
homepage = { workspace = true }
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw3 = { workspace = true }
cw3-fixed-multisig = { workspace = true }
cw4 = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { version = "1.0.190", default-features = false, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
cw4-group = { workspace = true }
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
easy-addr = { workspace = true }