[package]
name = "incentives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-multi-test = "0.13.4"
cw-utils = { version = "0.13.2" }
cw2 = { version = "0.13.2" }
cw20 = { version = "0.13.2" }
cw-storage-plus = { version = "0.13.2" }
cosmwasm-std = { version = "1.0.0-beta8" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde-json-wasm = "0.4.1"
thiserror = { version = "1.0.23" }
lockup = {path="../lockup"}

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta8" }