[package]
name = "incentives"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
nibiru-std = { workspace = true }
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
thiserror = { workspace = true }
lockup = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }