[package]
name = "lockup"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "1.0.2" }
cw2 = { version = "1.1.1" }
cw20 = { version = "1.1.1" }
cosmwasm-schema = { version = "1.4.0" }
cosmwasm-std = { version = "1.4.0" }
cw-storage-plus = { version = "1.1.0" }
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }

[dev-dependencies]