[package]
name = "nibi-stargate-perp"
version = "0.2.0"
edition = "2021"
homepage = { workspace = true }
repository = "https://github.com/NibiruChain/nibiru-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
schemars = { workspace = true }
cw2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
nibiru-std = { workspace = true }
broker-bank = { workspace = true }

[dev-dependencies]
cosmwasm-vm = "2.0.2"
serde_json = "1.0.108"
anyhow = { workspace = true }