[package]
name = "nusd-valuator"
version = "0.1.0"
edition = "2021"
homepage = { workspace = true }
repository = "https://github.com/NibiruChain/nibiru-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
nibiru-std = { workspace = true }
cw2 = { workspace = true }
serde_json = { workspace = true }
nibiru-ownable = { workspace = true }
anyhow = { workspace = true }