[package]
name = "pricefeed"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.4.0" }
cosmwasm-std = { version = "1.5.4" }
cw-storage-plus = { version = "1.1.0" }
cw-utils = { version = "1.0.2" }
cw2 = { version = "1.1.1" }
cw20 = { version = "1.1.1" }
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }

[dev-dependencies]